# stonefish_deployment

./: README.md
cola2_core/: CHANGELOG.md
cola2_core/cola2_comms/: package.xml
cola2_core/cola2_control/: package.xml
cola2_core/cola2_control/src/: captain_node.cpp
cola2_core/cola2_control/src/cola2_control/low_level_controllers/: only_thrusters_controller.cpp
cola2_core/cola2_core/: package.xml
cola2_core/cola2_log/: package.xml
cola2_core/cola2_log/src/: default_param_handler_node.py
cola2_core/cola2_nav/: package.xml
cola2_core/cola2_safety/: package.xml
cola2_core/cola2_sim/: package.xml
cola2_sparus2/: CHANGELOG.md  CMakeLists.txt  package.xml
cola2_sparus2/launch/: bag.launch  basic_bag.launch  sim_configuration.launch  sim_velocity_from_dynamics.launch
cola2_sparus2/sim_config/: controller.yaml  logitech_fx10_to_teleoperation.yaml  safety_supervisor.yaml
